clear forms after submit

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/rjshoemaker55/friend-finder#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "jquery-validation": "^1.19.0",
     "path": "^0.12.7"
   }
 }
